--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>lu.snt.smartgrid-topology-generator.model</module>
+        <module>lu.snt.smartgrid-topology-generator.generator</module>
     </modules>
 
     <properties>
