--- a/lu.snt.smartgrid-topology-generator.generator/src/main/resources/generator.properties
+++ b/lu.snt.smartgrid-topology-generator.generator/src/main/resources/generator.properties
@@ -1,5 +1,9 @@
+output_format = json
 nb_con = 3
 min_nb_sm = 5
 max_nb_sm = 25
 percentage_wm = 10
 percentage_gm = 10
+min_nb_hops = 1
+max_nb_hops = 7
+
