--- a/lu.snt.smartgrid-topology-generator.generator/pom.xml
+++ b/lu.snt.smartgrid-topology-generator.generator/pom.xml
@@ -6,11 +6,11 @@
         <groupId>lu.snt.smartgrid-topology-generator</groupId>
         <artifactId>lu.snt.smartgrid-topology-generator.root</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>lu.snt.smartgrid.smartgrid-topology-generator</artifactId>
+    <artifactId>lu.snt.smartgrid-topology-generator.generator</artifactId>
 
     <dependencies>
 
