--- a/lu.snt.smartgrid-topology-generator.model/pom.xml
+++ b/lu.snt.smartgrid-topology-generator.model/pom.xml
@@ -6,8 +6,8 @@
         <groupId>lu.snt.smartgrid-topology-generator</groupId>
         <artifactId>lu.snt.smartgrid-topology-generator.root</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>lu.snt.smartgrid-topology-generator.model</artifactId>
@@ -75,18 +75,18 @@
 
     </dependencies>
 
-    <repositories>
-        <repository>
-            <id>kevsnap</id>
-            <url>http://oss.sonatype.org/content/groups/public</url>
-        </repository>
-    </repositories>
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>kevsnap</id>-->
+            <!--<url>http://oss.sonatype.org/content/groups/public</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>kevsnap</id>
-            <url>http://oss.sonatype.org/content/groups/public</url>
-        </pluginRepository>
-    </pluginRepositories>
+    <!--<pluginRepositories>-->
+        <!--<pluginRepository>-->
+            <!--<id>kevsnap</id>-->
+            <!--<url>http://oss.sonatype.org/content/groups/public</url>-->
+        <!--</pluginRepository>-->
+    <!--</pluginRepositories>-->
 
 </project>
