--- a/pom.xml
+++ b/pom.xml
@@ -2,23 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>lu.snt.smartgrid-topology-generator.root</artifactId>
-        <groupId>lu.snt.smartgrid-topology-generator</groupId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath>pom.xml</relativePath>
-    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>lu.snt.smartgrid-topology-generator.generator</artifactId>
+    <groupId>lu.snt.smartgrid-topology-generator</groupId>
+    <artifactId>lu.snt.smartgrid-topology-generator.root</artifactId>
     <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>lu.snt.smartgrid-topology-generator.model</module>
         <module>lu.snt.smartgrid-topology-generator.generator</module>
     </modules>
 
     <properties>
-        <kmf.version>1.10.4-SNAPSHOT</kmf.version>
+        <kmf.version>2.0.0</kmf.version>
         <kotlin.version>0.7.271</kotlin.version>
     </properties>
 
