--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
     <properties>
         <kmf.version>2.0.0</kmf.version>
         <kotlin.version>0.7.271</kotlin.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
 </project>
